# pallet-templates

./: README.md
dataset/{{cookiecutter.directory_name}}/: Cargo.toml
dataset/{{cookiecutter.directory_name}}/src/: lib.rs  tests.rs
delegator/: cookiecutter.json
delegator/{{cookiecutter.directory_name}}/: Cargo.toml
delegator/{{cookiecutter.directory_name}}/src/: lib.rs
delegator/{{cookiecutter.directory_name}}/src/procs/: mod.rs  tests.rs
plain/{{cookiecutter.directory_name}}/: Cargo.toml
plain/{{cookiecutter.directory_name}}/src/: tests.rs
simple-map/: cookiecutter.json
simple-map/{{cookiecutter.directory_name}}/: Cargo.toml
simple-map/{{cookiecutter.directory_name}}/src/: lib.rs  tests.rs
