[package]
name = "{{cookiecutter.directory_name}}"
version = "{{cookiecutter.substrate_version}}"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
edition = "2018"
license = "GPL-3.0-or-later"
description = "A pallet that demonstrates Substrate's storage maps"

[package.metadata.substrate]
categories = [
    "pallet",
    "tutorial",
    "recipe",
]
compatibility_version = "{{cookiecutter.substrate_version}}"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'sp-std/std',
    'vec-set/std',
    'account-set/std',
]

[dependencies]
parity-scale-codec = { version = "1.3.0", features = ["derive"], default-features = false }
frame-support = { version = '{{cookiecutter.substrate_version}}', default-features = false }
frame-system = { version = '{{cookiecutter.substrate_version}}', default-features = false}
sp-runtime = { version = '{{cookiecutter.substrate_version}}', default-features = false }
sp-std = { version = '{{cookiecutter.substrate_version}}', default-features = false }
account-set = { path = '../../traits/account-set', default-features = false }
vec-set = { path = '../vec-set', default-features = false }

[dev-dependencies]
sp-core = { version = '{{cookiecutter.substrate_version}}', default-features = false }
sp-io = { version = '{{cookiecutter.substrate_version}}', default-features = false }
