[package]
name = "{{cookiecutter.directory_name}}"
version = "{{cookiecutter.substrate_version}}"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
edition = "2018"
license = "GPL-3.0-or-later"
description = "A pallet that demonstrates Substrate's storage maps"

[package.metadata.substrate]
categories = [
	"pallet",
	"tutorial",
	"recipe",
]
compatibility_version = "{{cookiecutter.substrate_version}}"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
]

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = '1.3.0' }
frame-support = { version = '{{cookiecutter.substrate_version}}', default-features = false }
frame-system = { version = '{{cookiecutter.substrate_version}}', default-features = false }
sp-runtime = { version = '{{cookiecutter.substrate_version}}', default-features = false }

[dev-dependencies]
sp-core = { version = '{{cookiecutter.substrate_version}}', default-features = false }
sp-io = { version = '{{cookiecutter.substrate_version}}', default-features = false }
